# arx-nanoarrow-sources

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml  release.yaml
conda/: env.yaml
scripts/: build_bundle.py  versioning.sh
src/arx_nanoarrow_sources/: __init__.py  _bundle.py  _version.py
tests/: test_bundle.py
