[project]
name = "arx-nanoarrow-sources"
version = "0.8.0"  # bundled nanoarrow version
description = "Bundled nanoarrow C headers and sources for the Arx ecosystem"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "nanoarrow >= 0.8.0, < 0.9.0",
]

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  {include = "arx_nanoarrow_sources", from = "src"},
]
include = [
  "src/arx_nanoarrow_sources/py.typed",
  "src/arx_nanoarrow_sources/vendor/**/*.c",
  "src/arx_nanoarrow_sources/vendor/**/*.h",
  "src/arx_nanoarrow_sources/vendor/**/*.hpp",
  "src/arx_nanoarrow_sources/vendor/**/*.json",
  "src/arx_nanoarrow_sources/vendor/**/*.md",
  "src/arx_nanoarrow_sources/vendor/**/*.txt",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.11.0"
mypy = ">=1.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I001",
  "PL",
  "RUF",
]
ignore = [
  "PLR0913",
]

[tool.mypy]
python_version = "3.10"
strict = true
