[project]
name = "arx-nanoarrow-sources"
version = "0.8.0"  # bundled nanoarrow version
description = "Bundled nanoarrow C headers and sources for the Arx ecosystem"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "nanoarrow >= 0.8.0, < 0.9.0",
]

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  {include = "arx_nanoarrow_sources", from = "src"},
]
include = [
  {path = "src/arx_nanoarrow_sources/py.typed", format = ["sdist", "wheel"]},
  {path = "src/arx_nanoarrow_sources/vendor/**/*.c", format = ["sdist", "wheel"]},
  {path = "src/arx_nanoarrow_sources/vendor/**/*.h", format = ["sdist", "wheel"]},
  {path = "src/arx_nanoarrow_sources/vendor/**/*.hpp", format = ["sdist", "wheel"]},
  {path = "src/arx_nanoarrow_sources/vendor/**/*.json", format = ["sdist", "wheel"]},
  {path = "src/arx_nanoarrow_sources/vendor/**/*.md", format = ["sdist", "wheel"]},
  {path = "src/arx_nanoarrow_sources/vendor/**/*.txt", format = ["sdist", "wheel"]},
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.11.0"
mypy = ">=1.10.0"
bandit = ">=1.9.4"
vulture = ">=2.15"
pre-commit = ">=4.5.1"
douki = ">=0.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]
ignore = [
  "PLR0913",
]
extend-select = [
  "UP006",  # Prefer builtin generics in annotations
  "UP007",  # Prefer | syntax for unions and optionals
]

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
